2022-08-06 0.5.2 Added first embryo of colossal `storazzo` CLI utility.
2022-08-05 0.5.1 Hi from Croatia! Perfected the MD5 calculation from CLI.
2022-07-27 0.5.0 Applied rubocop.
2022-07-27 0.3.2 Removed most @@vars and moved to static/final UppercaseVars. Hope it goes better now.
2022-07-26 0.3.1 Dunno
2022-07-24 0.3.0 [MAJOR] renamed hi in say_hi. Also created the AbstractClass and infra for multiple RicDisks.
2022-07-24 0.2.2 small thing I did this morning and I forgot.
2022-07-13 0.2.1 just made public Singleton config methods. So i can try again with2022-07-13 0.2.1 just made public Singleton config methods. So i can try again with2022-07-13 0.2.1 just made public Singleton config methods. So i can try again with binary once updated rubygems.
                 Yup, I really need to learn to load local gem code from binary :)
2022-07-13 0.2.0 MAJOR refactor
2022-07-13 0.1.2 RicDisk finally spits out something meaningful and colored.
2022-07-13 0.1.1 Added Rake test - wow
2022-07-13 0.1.0 Refactored the Gempec A LOT. Also moved some libraries internally.