@@ -5,16 +5,21 @@ module Storazzo::Media
 
     attr_accessor :project_id
 
-    def initialize(local_mount, project_id = nil)
+    def initialize(local_mount, project_id=nil)
       deb "[Storazzo::Media::GcsBucket] initialize"
 
       @local_mountpoint = File.expand_path(local_mount)
       @description = "MountPoint in '#{local_mount}' pointing at TODO with mount options = TODO"
+      project_id ||= _autodetect_project_id()
       @project_id = project_id
       raise "Sorry local mount doesnt exist!" unless File.exist?(@local_mountpoint)
 
       @wr = writeable? # File.writable?(stats_filename_default_fullpath) # .writeable? stats_file_smart_fullpath
       super(local_mount) rescue "SUPER_ERROR(#{local_mount}): #{$!}"
+    end
+
+    def _autodetect_project_id
+      "todo-my-project-id-123" # TODO fix
     end
 
     def self.list_all(config = nil)
@@ -34,20 +39,24 @@ module Storazzo::Media
     end
 
     def self.list_all_with_type(config = nil)
+      puts "GCS::list_all_with_type() -- pull config"
       config ||= Storazzo::RicDiskConfig.instance
       config.load # in case I need to load it for the first time
-      deb "TODO(ricc): also add gsutil ls"
+      puts "GCS::list_all_with_type() -- TODO(ricc): also add gsutil ls"
       # getFromConfig
       deb "I'm now returning a 'complex' array to tell the caller what kind of element they're getting, eg: GCS from Config Yaml, vs GCS from gsutil ls "
       list_from_config_with_type = config.get_bucket_paths.map { |path| [:config_gcs_bucket, path] }
+      ret_list = list_from_config_with_type
       if (config.project_id)
         # so I concatenate Apples with Bananas with names
-        return list_from_config_with_type + list_available_buckets(config.project_id).map { |path|
+        ret_list += list_available_buckets(config.project_id).map { |path|
                                               [:gsutil_ls_gcs_bucket, path]
                                             }
+      else
+        deb "list_all_with_type(): empty project id. Skipping"
       end
 
-      return list_from_config_with_type
+      return ret_list
     end
 
     def self.list_available_buckets(project_id, opts = {})
