@@ -1,3 +1,4 @@
+2022-08-07 0.5.3 Skeleton of CLI finished. Also fixed the GcsBucket class naming bug.
 2022-08-06 0.5.2 Added first embryo of colossal `storazzo` CLI utility.
 2022-08-05 0.5.1 Hi from Croatia! Perfected the MD5 calculation from CLI.
 2022-07-27 0.5.0 Applied rubocop.
